--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <link rel="stylesheet" href="./style.css">
+    <!-- Don't forget to link your CSS file! -->
+  </head>
+  <body>
+    <header>
